minor - study list buttons align right, fixed width for readings cols

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -231,6 +231,13 @@ Muted grey #6c757d
 
 }
 
+/* History
+-------------------------------------------------- */
+
+.dt-buttons {
+    text-align: right;
+}
+
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
